# VkSupport

./: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  VERSION.md
Data/Binaries/: main.vert.spv
Data/Shaders/: main.frag  main.vert
Scripts/: compile_shaders.py
Source/: sdl-sample.c
Source/VkSupport/: CMakeLists.txt  vk-device.c  vk-device.h  vk-hardware.c  vk-hardware.h  vk-instance.c  vk-instance.h  vk-macros.h  vk-memory.c  vk-memory.h  vk-sdl.c  vk-sdl.h  vk-swapchain.c  vk-swapchain.h  vk-types.h  vk-utils.c  vk-utils.h
